# dalal-ai

./: .gitignore  README.md  StockSense_AI_PRD.docx  docker-compose.yml
.github/workflows/: test.yml
backend/: .coverage  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  run_supabase_schema.py  test_v2_pipeline.py
backend/app/: __init__.py  db.py  llm_provider.py  main.py  models.py  worker.py
backend/app/agents/: competitor_agent.py  document_fetcher.py  event_detection_agent.py  fundamental_agent.py  news_scraper.py  orchestrator.py  peer_benchmark_agent.py  report_agent.py  risk_redflag_agent.py  scenario_agent.py  sector_agent.py  sentiment_agent.py  social_listener.py  technical_agent.py  valuation_agent.py
backend/app/api/: routes_reports.py  routes_stocks.py
backend/app/core/: vector_store.py
backend/app/db/: supabase_client.py
backend/app/schemas/: __init__.py  analysis.py  document_object.py  news_article.py  report.py  social_post.py
backend/app/scrapers/: __init__.py  document_fetcher.py  news_scraper.py  pdf_extractor.py  social_listener.py  stock_alias.py
backend/app/services/: live_data.py  report_service.py
backend/app/vector_store/: chroma_client.py  embedder.py  retriever.py  supabase_client.py
backend/chroma_db/: chroma.sqlite3
backend/data_ingestion/: orchestrator.py
backend/data_ingestion/collectors/: filings.py  market.py  news.py  sentiment.py
backend/data_ingestion/db/: client.py
backend/data_ingestion/models/: schemas.py
backend/gradio_app/: app.py
backend/scripts/: delete_docs.py  ingest_docs.py  schema.sql
backend/tests/: conftest.py  test_document_fetcher.py  test_news_scraper.py  test_social_listener.py  test_vector_store.py
backend/tests/integration/: test_phase2.py
backend/tests/manual/: test_live_scrapers.py
backend/tests/unit/: test_document_fetcher.py  test_news_scraper.py  test_pdf_extractor.py  test_social_listener.py  test_stock_alias.py
docs/schemas/: phase1_contracts.json
frontend/: Dockerfile  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/api/auth/[...nextauth]/: route.ts
frontend/src/components/: CollectorRow.tsx  ResultCard.tsx
frontend/src/lib/: api.ts
frontend/src/types/: api.ts
scripts/: generate_schemas.py  ingest_docs.py
