[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app", "gradio_app"]

[project]
name = "stocksense-ai"
version = "0.1.0"
description = "AI-powered Indian equity research assistant"
requires-python = ">=3.10"

dependencies = [
    # API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-dotenv>=1.0.0",
    # Scraping
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    # PDF extraction
    "pdfplumber>=0.11.0",
    "pytesseract>=0.3.10",
    "Pillow>=10.4.0",
    # News
    "newsapi-python>=0.2.7",
    # Social (Twitter/X is scraped via Google, no tweepy needed)
    # Gradio UI
    "gradio>=4.36.0",
    "chromadb>=1.5.5",
    "openai>=2.26.0",
    "langchain>=1.2.12",
    "langchain-openai>=1.1.11",
    "langgraph>=1.1.2",
    "langchain-google-genai>=4.2.1",
    "transformers>=5.3.0",
    "torch>=2.10.0",
    "supabase>=2.28.0",
    "langchain-core>=1.2.18",
    "sentence-transformers>=5.3.0",
    "langchain-huggingface>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-mock>=3.14.0",
    "pytest-cov>=5.0.0",
    "responses>=0.25.0",
    "ruff>=0.4.0",
    "black>=24.0.0",
    "pre-commit>=3.7.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-v"

[tool.coverage.run]
source = ["app"]
omit = ["tests/*", "gradio_app/*"]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = ["E501"]

[tool.black]
line-length = 100
target-version = ["py312"]
